--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.2.2",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^5.8.0",
     "bcryptjs": "^3.0.2",
