--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
+# Configuración del servidor
+PORT=3001
+
 JWT_SECRET=tu-clave-secreta-super-segura-para-jwt-aqui-debe-ser-muy-larga
 NODE_ENV=development
+
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASS=
+DB_NAME=documentacion
+DB_PASSWORD=
+
+# Configuración de CORS
+CORS_ORIGIN=http://localhost:4321
