--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@astrojs/vercel": "^8.1.5",
     "astro": "^5.8.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.4.2",
     "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
