Refactor login and project detail pages for improved UI and functionality
- Updated login-cliente.astro to enhance styling and feedback messages.
- Adjusted login.astro to reduce redirection delay after successful login.
- Improved proyectos-clientes-detalles.astro layout and added better project detail presentation.
- Enhanced requisitos.astro with better structure and image handling.
- Added console log for JWT_SECRET in auth.ts for debugging purposes.
- Introduced test-db.ts for database connection testing.
- Added favicon image asset.

--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
-# Configuración del servidor
-PORT=3001
-
-JWT_SECRET=tu-clave-secreta-super-segura-para-jwt-aqui-debe-ser-muy-larga
-NODE_ENV=development
+JWT_SECRET=?0Rt$eQ4N8WLv/8h*1.wIs?d!5b0A5_yH9_Z0
 
 DB_HOST=localhost
 DB_PORT=3306
@@ -11,5 +7,4 @@ DB_PASS=
 DB_NAME=documentacion
 DB_PASSWORD=
 
-# Configuración de CORS
 CORS_ORIGIN=http://localhost:4321
