--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/node": "^9.2.2",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/vercel": "^8.1.5",
     "astro": "^5.8.0",
@@ -22,7 +21,6 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20.0.0"
+    "@types/jsonwebtoken": "^9.0.9"
   }
 }
