--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "@astrojs/vercel": "^8.1.5",
-    "astro": "^5.8.0",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^16.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.4.2",
-    "tailwindcss": "^3.0.0"
+    "@astrojs/tailwind": "5.0.0",
+    "@astrojs/vercel": "8.1.5",
+    "astro": "5.8.0",
+    "bcryptjs": "3.0.2",
+    "dotenv": "16.5.0",
+    "jsonwebtoken": "9.0.2",
+    "mariadb": "3.4.2",
+    "tailwindcss": "3.0.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.9"
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.9"
   }
 }
