--- a/.env
+++ b/.env
@@ -5,6 +5,5 @@ DB_PORT=3306
 DB_USER=root
 DB_PASS=
 DB_NAME=documentacion
-DB_PASSWORD=
 
-CORS_ORIGIN=http://localhost:4321
+CORS_ORIGIN=https://doc-ecommerce.vercel.app/
